--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,14 @@
 {
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" } }]
+    ["@babel/preset-env", {
+        "targets": { "node": "current", "browsers": ["last 2 versions", "ie >= 11"] },
+        "useBuiltIns": "usage"
+    }]
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-transform-runtime", { "regenerator":  true }]
-  ]
+  ],
+  "sourceType": "unambiguous"
 }
