--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
         "test:functional": "npx cypress open"
     },
     "dependencies": {
+        "@babel/polyfill": "^7.6.0",
         "@material-ui/core": "^4.4.3",
         "@material-ui/icons": "^4.4.3",
         "axios": "^0.19.0",
         "body-parser": "^1.19.0",
+        "classnames": "^2.2.6",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "csurf": "^1.10.0",
@@ -68,8 +70,7 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.1",
-        "react-toastify": "^5.4.0",
-        "video-thumbnail-generator": "^1.1.3"
+        "react-toastify": "^5.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
@@ -82,7 +83,6 @@
         "babel-cli": "^6.26.0",
         "babel-eslint": "^10.0.2",
         "babel-loader": "^8.0.6",
-        "babel-polyfill": "^6.26.0",
         "babel-register": "^6.26.0",
         "cross-env": "^5.2.0",
         "css-loader": "^3.1.0",
