--- a/package.json
+++ b/package.json
@@ -30,28 +30,24 @@
         "ios >= 9",
         "Android >= 4"
     ],
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run lint && npm run build && npm run test",
-            "pre-push": "npm run test"
-        }
-    },
     "scripts": {
-        "start": "cross-env NODE_ENV=development node src/js/server/server.js",
+        "start": "cross-env NODE_ENV=development node ./src/js/server/server.js",
         "clean": "rimraf ./dist/bundle.*",
         "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --hide-modules --progress --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --hide-modules --progress --mode production",
-        "lint:js": "eslint --fix --ext .js ./src/js/**/*.js ./data/**/*.js",
+        "lint:js": "eslint --fix --ext .js ./src/js/**/*.js",
         "lint:scss": "sass-lint-auto-fix --config .sass-lint.yml ./src/**/*.scss",
-        "lint": "run-p lint:js lint:scss",
+        "lint": "npm run lint:js && npm run lint:scss",
         "test": "jest ./tests/unit/components -u",
         "test:functional": "npx cypress open"
     },
     "dependencies": {
+        "@babel/polyfill": "^7.6.0",
         "@material-ui/core": "^4.4.3",
         "@material-ui/icons": "^4.4.3",
         "axios": "^0.19.0",
         "body-parser": "^1.19.0",
+        "classnames": "^2.2.6",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "csurf": "^1.10.0",
@@ -68,8 +64,7 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.1",
-        "react-toastify": "^5.4.0",
-        "video-thumbnail-generator": "^1.1.3"
+        "react-toastify": "^5.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
@@ -82,7 +77,6 @@
         "babel-cli": "^6.26.0",
         "babel-eslint": "^10.0.2",
         "babel-loader": "^8.0.6",
-        "babel-polyfill": "^6.26.0",
         "babel-register": "^6.26.0",
         "cross-env": "^5.2.0",
         "css-loader": "^3.1.0",
