--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
     ["@babel/preset-env", {
-        "targets": { "node": "current", "browsers": ["last 2 versions", "ie >= 11"] },
-        "useBuiltIns": "usage"
-    }]
+        "targets": { "node": "current", "browsers": ["last 2 versions", "ie >= 11"] }
+    }],
+    "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
