--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "autoprefixer": "^9.6.1",
         "babel-cli": "^6.26.0",
         "babel-eslint": "^10.0.2",
+        "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
         "babel-register": "^6.26.0",
         "cross-env": "^5.2.0",
