--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "Android >= 4"
     ],
     "scripts": {
-        "start": "cross-env NODE_ENV=development node ./src/js/server/server.js",
+        "start": "cross-env NODE_ENV=development node ./dist/server.js",
         "clean": "rimraf ./dist/bundle.*",
         "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --hide-modules --progress --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --hide-modules --progress --mode production",
@@ -53,9 +53,6 @@
         "csurf": "^1.10.0",
         "express": "^4.17.1",
         "fluent-ffmpeg": "^2.1.2",
-        "fluxible": "^1.4.0",
-        "fluxible-addons-react": "^0.2.16",
-        "fluxible-plugin-context-config": "^2.0.0",
         "keymirror": "^0.1.1",
         "lodash": "^4.17.15",
         "mkdirp": "^0.5.1",
@@ -63,22 +60,26 @@
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.1",
-        "react-toastify": "^5.4.0"
+        "react-toastify": "^5.4.0",
+        "redux": "^4.0.4",
+        "redux-thunk": "^2.3.0",
+        "serialize-javascript": "^2.1.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.6.2",
         "@babel/core": "^7.5.5",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/plugin-proposal-decorators": "^7.4.4",
         "@babel/plugin-transform-runtime": "^7.6.2",
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
+        "@babel/register": "^7.6.2",
         "autoprefixer": "^9.6.1",
-        "babel-cli": "^6.26.0",
         "babel-eslint": "^10.0.2",
         "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
-        "babel-register": "^6.26.0",
         "cross-env": "^5.2.0",
         "css-loader": "^3.1.0",
         "cypress": "^3.4.0",
@@ -99,6 +100,8 @@
         "postcss-cli": "^6.1.3",
         "postcss-loader": "^3.0.0",
         "react-test-renderer": "^16.8.6",
+        "redux-devtools": "^3.5.0",
+        "redux-devtools-extension": "^2.13.8",
         "resolve-url-loader": "^3.1.0",
         "rimraf": "^2.6.3",
         "sass-lint": "^1.13.1",
@@ -107,6 +110,7 @@
         "uglifyjs-webpack-plugin": "^2.1.3",
         "url-loader": "^2.1.0",
         "webpack": "^4.38.0",
-        "webpack-cli": "^3.3.6"
+        "webpack-cli": "^3.3.6",
+        "webpack-node-externals": "^1.7.2"
     }
 }
