--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "lint:js": "eslint --fix --ext .js ./src/js/**/*.js",
         "lint:scss": "sass-lint-auto-fix --config .sass-lint.yml ./src/**/*.scss",
         "lint": "npm run lint:js && npm run lint:scss",
-        "test": "jest ./tests/unit/components/app.spec.js -u",
+        "test": "jest ./tests/unit/components -u",
+        "test:watch": "jest ./tests/unit/components -u --watch",
         "test:functional": "npx cypress open"
     },
     "dependencies": {
@@ -101,7 +102,6 @@
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^6.1.3",
         "postcss-loader": "^3.0.0",
-        "react-test-renderer": "^16.8.6",
         "redux-devtools": "^3.5.0",
         "resolve-url-loader": "^3.1.0",
         "rimraf": "^2.6.3",
