--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "lint": "npm run lint:js && npm run lint:scss",
         "test": "jest ./tests/unit/components -u",
         "test:watch": "jest ./tests/unit/components -u --watch",
-        "test:functional": "npx cypress open"
+        "test:functional": "npx cypress run"
     },
     "dependencies": {
         "@babel/polyfill": "^7.6.0",
@@ -56,12 +56,12 @@
         "express": "^4.17.1",
         "fluent-ffmpeg": "^2.1.2",
         "keymirror": "^0.1.1",
-        "lodash": "^4.17.15",
         "mkdirp": "^0.5.1",
         "multer": "^1.4.2",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-global-configuration": "^1.3.0",
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.1",
         "react-toastify": "^5.4.0",
@@ -85,7 +85,7 @@
         "babel-loader": "^8.0.6",
         "cross-env": "^5.2.0",
         "css-loader": "^3.1.0",
-        "cypress": "^3.4.0",
+        "cypress": "^3.4.1",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
         "eslint": "^5.16.0",
