--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
         "eslint-plugin-destructuring": "^2.2.1",
         "eslint-plugin-react": "^7.31.4",
         "file-loader": "^6.2.0",
-        "jest": "^29.0.2",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.0.3",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.6.1",
         "normalize.css": "^8.0.1",
