Setup git hooks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,20 @@ services:
     environment:
       IS_DOCKER: 1
       TZ: ${TZ:-Australia/Sydney}
+
+  git_hook_installer:
+    image: sharpdressedcodes/git-hooks-installer:1.0.0-stretch-slim
+    #    build:
+    #      context: docker/git_hooks_installer
+    #      dockerfile: Dockerfile
+    #      args:
+    #        - USER_ID=${USER_ID:-0}
+    #        - USER_NAME=${USER_NAME:-node}
+    #        - GROUP_ID=${GROUP_ID:-0}
+    #        - GROUP_NAME=${GROUP_NAME:-node}
+    container_name: git_hook_installer
+    volumes:
+      - ./.git:/tmp/.git
+      - ./hooks:/tmp/hooks
+    networks:
+      - custom
