--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
         "file-loader": "^6.2.0",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
+        "husky": "^8.0.1",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.6.1",
         "normalize.css": "^8.0.1",
