--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
         "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --performance-hints warning --color --progress --stats 'errors-only' --mode development",
         "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats 'errors-only' --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats 'errors-only' --mode production",
-        "lint:js": "eslint --ext .js ./src/**/*.js",
+        "lint:js": "eslint ./src/**/*.js",
+        "lint:js:staged": "eslint",
         "lint:js:fix": "npm run lint:js -- --fix",
+        "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js",
         "lint:scss": "stylelint --allow-empty-input --config ./stylelint.config.js ./src/**/*.scss",
         "lint:scss:fix": "npm run lint:scss -- --fix",
         "lint": "concurrently --names 'stylelint,eslint' -c 'bgBlue.bold,bgCyan.bold' 'npm run lint:scss' 'npm run lint:js'",
@@ -124,6 +126,7 @@
         "jest-environment-jsdom": "^29.0.3",
         "husky": "^8.0.1",
         "html-webpack-plugin": "^5.5.0",
+        "lint-staged": "^13.0.3",
         "mini-css-extract-plugin": "^2.6.1",
         "normalize.css": "^8.0.1",
         "npm-run-all": "^4.1.5",
