--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
         "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats 'errors-only' --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats 'errors-only' --mode production",
         "lint:js": "eslint ./src/**/*.js",
-        "lint:js:staged": "eslint",
+        "lint:js:staged": "eslint --fix",
         "lint:js:fix": "npm run lint:js -- --fix",
-        "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js",
+        "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js --fix",
         "lint:scss": "stylelint --allow-empty-input --config ./stylelint.config.js ./src/**/*.scss",
         "lint:scss:fix": "npm run lint:scss -- --fix",
         "lint": "concurrently --names 'stylelint,eslint' -c 'bgBlue.bold,bgCyan.bold' 'npm run lint:scss' 'npm run lint:js'",
