--- a/package.json
+++ b/package.json
@@ -35,20 +35,23 @@
     "scripts": {
         "prepare": "node --stack-trace-limit=9999 ./scripts/install-husky.js",
         "clean": "rimraf ./build/bundle.* ./build/server.js && mkdirp ./build/data/uploads",
-        "dev": "concurrently --names 'build,server' -c 'bgBlue.bold,bgCyan.bold' 'npm run build:dev:watch' 'wait-on ./build/server.js && npm run start:dev'",
+        "dev": "concurrently --names \"build,server\" -c \"bgBlue.bold,bgCyan.bold\" \"npm run build:dev:watch\" \"wait-on ./build/server.js && npm run start:dev\"",
         "start:dev": "cross-env NODE_ENV=development node --stack-trace-limit=9999 ./build/server.js",
         "start": "cross-env NODE_ENV=production node ./build/server.js",
-        "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --performance-hints warning --color --progress --stats 'errors-only' --mode development",
-        "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats 'errors-only' --mode development",
-        "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats 'errors-only' --mode production",
+        "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --performance-hints warning --color --progress --stats \"errors-only\" --mode development",
+        "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats \"errors-only\" --mode development",
+        "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats \"errors-only\" --mode production",
+        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
+        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#node_modules\"",
+        "lint:md:staged": "markdownlint-cli2-fix \"#node_modules\"",
         "lint:js": "eslint ./src/**/*.js",
         "lint:js:staged": "eslint --fix",
         "lint:js:fix": "npm run lint:js -- --fix",
         "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js --fix",
         "lint:scss": "stylelint --allow-empty-input --config ./stylelint.config.js ./src/**/*.scss",
         "lint:scss:fix": "npm run lint:scss -- --fix",
-        "lint": "concurrently --names 'stylelint,eslint' -c 'bgBlue.bold,bgCyan.bold' 'npm run lint:scss' 'npm run lint:js'",
-        "lint:fix": "concurrently --names 'stylelint,eslint' -c 'bgBlue.bold,bgCyan.bold' 'npm run lint:scss:fix' 'npm run lint:js:fix'",
+        "lint": "concurrently --names \"markdownlint,stylelint,eslint\" -c \"bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:md\" \"npm run lint:scss\" \"npm run lint:js\"",
+        "lint:fix": "concurrently --names \"markdownlint,stylelint,eslint\" -c \"bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:md:fix\" \"npm run lint:scss:fix\" \"npm run lint:js:fix\"",
         "test": "cross-env NODE_ENV=test jest --colors --passWithNoTests",
         "test:coverage": "npm run test -- --coverage",
         "test:ci": "cross-env CI=true npm run test",
@@ -56,8 +59,8 @@
         "test:watch": "npm run test -- --watch",
         "test:watch:coverage": "npm run test:coverage -- --watch",
         "test:e2e": "npx cypress run",
-        "test:e2e:chrome": "echo 'Not Implemented yet!'; return 0; npx cypress run --browser chromium --headless",
-        "test:e2e:chrome:headed": "echo 'Not Implemented yet!'; return 0; npx cypress run --browser chromium",
+        "test:e2e:chrome": "echo \"Not Implemented yet!\"; return 0; npx cypress run --browser chromium --headless",
+        "test:e2e:chrome:headed": "echo \"Not Implemented yet!\"; return 0; npx cypress run --browser chromium",
         "test:e2e:open": "npx cypress open --project .",
         "test:e2e:ci": "cross-env CI=true npm run test:e2e",
         "audit:ci": "npm audit --audit-level high --json"
@@ -127,6 +130,7 @@
         "husky": "^8.0.1",
         "html-webpack-plugin": "^5.5.0",
         "lint-staged": "^13.0.3",
+        "markdownlint-cli2": "^0.5.1",
         "mini-css-extract-plugin": "^2.6.1",
         "normalize.css": "^8.0.1",
         "npm-run-all": "^4.1.5",
