--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
+    "*.md": "return 0 && npm run lint:md:staged --",
     "*.js": "npm run lint:js:staged --",
     "*.scss": "npm run lint:scss:staged --"
 }
