--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
         "html-webpack-plugin": "^5.5.0",
         "lint-staged": "^13.0.3",
         "markdownlint-cli2": "^0.5.1",
+        "micromatch": "^4.0.5",
         "mini-css-extract-plugin": "^2.6.1",
         "normalize.css": "^8.0.1",
         "npm-run-all": "^4.1.5",
