--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   node:
-    #image: 'node:10.16.3-alpine'
+    #image: sharpdressedcodes/node:16.15.0-bullseye-slim
     build:
       context: ./docker/node
       dockerfile: Dockerfile
@@ -17,23 +17,27 @@ services:
       - custom
     ports:
       - '3000:3000'
-    restart: unless-stopped
-    tty: true
-    working_dir: /home/node/app
-
-  cypress:
-    image: 'sharpdressedcodes/node:10.16.3-stretch-slim-cypress-3.4.1'
-    #build:
-    #  context: ./docker/cypress
-    #  dockerfile: Dockerfile
-    #  network: host
-    network_mode: 'host'
-    container_name: cypress
-    volumes:
-      - ./:/home/node/app
+      - '8080:8080'
     restart: unless-stopped
     tty: true
     working_dir: /home/node/app
     environment:
-      - DISPLAY=
-      - CYPRESS_BASE_URL=http://172.17.0.1:3000/
+      IS_DOCKER: 1
+      TZ: ${TZ:-Australia/Sydney}
+
+#  cypress:
+#    image: 'sharpdressedcodes/node:10.16.3-stretch-slim-cypress-3.4.1'
+#    #build:
+#    #  context: ./docker/cypress
+#    #  dockerfile: Dockerfile
+#    #  network: host
+#    network_mode: 'host'
+#    container_name: cypress
+#    volumes:
+#      - ./:/home/node/app
+#    restart: unless-stopped
+#    tty: true
+#    working_dir: /home/node/app
+#    environment:
+#      - DISPLAY=
+#      - CYPRESS_BASE_URL=http://172.17.0.1:3000/
