--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --performance-hints warning --color --progress --stats \"errors-only\" --mode development",
         "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats \"errors-only\" --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats \"errors-only\" --mode production",
+        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\"node_modules/**/*.(yml|yaml)\"",
+        "lint:yml:staged": "yamllint --ignore=\"node_modules/**/*.(yml|yaml)\"",
         "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
         "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#node_modules\"",
         "lint:md:staged": "markdownlint-cli2-fix \"#node_modules\"",
@@ -50,8 +52,8 @@
         "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js --fix",
         "lint:scss": "stylelint --allow-empty-input --config ./stylelint.config.js ./src/**/*.scss",
         "lint:scss:fix": "npm run lint:scss -- --fix",
-        "lint": "concurrently --names \"markdownlint,stylelint,eslint\" -c \"bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:md\" \"npm run lint:scss\" \"npm run lint:js\"",
-        "lint:fix": "concurrently --names \"markdownlint,stylelint,eslint\" -c \"bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:md:fix\" \"npm run lint:scss:fix\" \"npm run lint:js:fix\"",
+        "lint": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md\" \"npm run lint:scss\" \"npm run lint:js\"",
+        "lint:fix": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md:fix\" \"npm run lint:scss:fix\" \"npm run lint:js:fix\"",
         "test": "cross-env NODE_ENV=test jest --colors --passWithNoTests",
         "test:coverage": "npm run test -- --coverage",
         "test:ci": "cross-env CI=true npm run test",
@@ -148,6 +150,7 @@
         "wait-on": "^6.0.1",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-node-externals": "^3.0.0"
+        "webpack-node-externals": "^3.0.0",
+        "yaml-lint": "^1.7.0"
     }
 }
