--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     restart: unless-stopped
     tty: true
     working_dir: /home/node/app
+    env_file:
+      - .env
     environment:
       IS_DOCKER: 1
       TZ: ${TZ:-Australia/Sydney}
