--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,9 +32,13 @@ jobs:
           DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
-          USER_ID=`id -u` GROUP_ID=`id -g` docker-compose -f docker-compose.ci.yml down
-          USER_ID=`id -u` GROUP_ID=`id -g` docker-compose -f docker-compose.ci.yml up -d --build
+          export USER_ID=`id -u`
+          export GROUP_ID=`id -g`
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml down
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml up -d --build
           docker ps -a
+          \
+          echo "USER_ID=${USER_ID} GROUP_ID=${GROUP_ID}"
           \
           echo "Installing dependencies..."
           docker-compose -f docker-compose.ci.yml exec -T --user node node npm i
