--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,12 +30,12 @@ jobs:
           TZ: Australia/Sydney
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          USER_ID: `id -u`
+          GROUP_ID: `id -g`
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
-          export USER_ID=`id -u`
-          export GROUP_ID=`id -g`
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml down
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml up -d --build
+          docker-compose -f docker-compose.ci.yml down
+          docker-compose -f docker-compose.ci.yml up -d --build
           docker ps -a
           \
           echo "USER_ID=${USER_ID} GROUP_ID=${GROUP_ID}"
