--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,9 +30,9 @@ jobs:
           TZ: Australia/Sydney
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          USER_ID: `id -u`
-          GROUP_ID: `id -g`
         run: |
+          export USER_ID=`id -u`
+          export GROUP_ID=`id -g`
           docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
           docker-compose -f docker-compose.ci.yml down
           docker-compose -f docker-compose.ci.yml up -d --build
