--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -34,25 +34,25 @@ jobs:
           export USER_ID=`id -u`
           export GROUP_ID=`id -g`
           docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
-          docker-compose -f docker-compose.ci.yml down
-          docker-compose -f docker-compose.ci.yml up -d --build
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml down
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml up -d --build
           docker ps -a
           \
           echo "USER_ID=${USER_ID} GROUP_ID=${GROUP_ID}"
           \
           echo "Installing dependencies..."
-          docker-compose -f docker-compose.ci.yml exec -T --user node node npm i
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm i
           \
           echo "Running linting..."
-          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run lint
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run lint
           \
           echo "Running unit tests..."
-          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run test:ci
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run test:ci
           \
           echo "Running build process..."
-          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run build
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run build
           \
           echo "Running audit..."
-          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run audit:ci
+          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run audit:ci
           \
           echo "🚀 Passed all checks successfully 💪"
