--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,29 +33,25 @@ jobs:
         run: |
           export USER_ID=`id -u`
           export GROUP_ID=`id -g`
-          export CYPRESS_CACHE_FOLDER=/home/node/app/.cypress-cache
-          echo "$(grep -v '"cypress":' package.json)" >package.json
-          cat package.json
           docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml down
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml up -d --build
+          docker-compose -f docker-compose.ci.yml down
+          docker-compose -f docker-compose.ci.yml up -d --build
           docker ps -a
           \
-          echo "USER_ID=${USER_ID} GROUP_ID=${GROUP_ID}"
-          \
           echo "Installing dependencies..."
-          CYPRESS_CACHE_FOLDER=/home/node/app/.cypress-cache USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user root node npm i
+          echo "$(grep -v '"cypress":' package.json)" >package.json
+          docker-compose -f docker-compose.ci.yml exec -T --user root node npm i
           \
           echo "Running linting..."
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run lint
+          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run lint
           \
           echo "Running unit tests..."
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run test:ci
+          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run test:ci
           \
           echo "Running build process..."
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run build
+          docker-compose -f docker-compose.ci.yml exec -T --user root node npm run build
           \
           echo "Running audit..."
-          USER_ID=`id -u` GROUP_ID=`id -g` && docker-compose -f docker-compose.ci.yml exec -T --user node node npm run audit:ci
+          docker-compose -f docker-compose.ci.yml exec -T --user node node npm run audit:ci
           \
           echo "🚀 Passed all checks successfully 💪"
