Get cypress working

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,8 +19,9 @@
     },
     "globals": {
         "expect": true,
-        "sinon": true,
-        "Promise": true
+        "Promise": true,
+        "Cypress": true,
+        "cy": true
     },
     "plugins": [
         "@babel",
