--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
         "test:ci:coverage": "cross-env CI=true npm run test:coverage",
         "test:watch": "npm run test -- --watch",
         "test:watch:coverage": "npm run test:coverage -- --watch",
-        "test:e2e": "npx cypress run",
-        "test:e2e:chrome": "echo \"Not Implemented yet!\"; return 0; npx cypress run --browser chromium --headless",
-        "test:e2e:chrome:headed": "echo \"Not Implemented yet!\"; return 0; npx cypress run --browser chromium",
-        "test:e2e:open": "npx cypress open --project .",
+        "test:e2e": "node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run\"",
+        "test:e2e:chrome": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run --browser chromium --headless\"",
+        "test:e2e:chrome:headed": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \" npx cypress run --browser chromium\"",
+        "test:e2e:open": "node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress open --browser --e2e --project .\"",
         "test:e2e:ci": "cross-env CI=true npm run test:e2e",
         "audit:ci": "npm audit --audit-level high --json"
     },
