--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -42,7 +42,7 @@ jobs:
           \
           echo "Installing dependencies..."
           echo "$(grep -v '"cypress":' package.json)" >package.json
-          docker-compose -f docker-compose.ci.yml exec -T node echo "" && npm i --legacy-peer-deps
+          docker-compose -f docker-compose.ci.yml exec -T node echo "" && npm i --legacy-peer-deps --foreground-scripts
           \
           echo "Running linting..."
           docker-compose -f docker-compose.ci.yml exec -T node npm run lint
@@ -52,6 +52,9 @@ jobs:
           \
           echo "Running build process..."
           docker-compose -f docker-compose.ci.yml exec -T node echo "" && npm run build
+          \
+          echo "Running e2e tests..."
+          docker-compose -f docker-compose.ci.yml exec -T node echo "" && npm run test:e2e:ci
           \
           echo "Running audit..."
           docker-compose -f docker-compose.ci.yml exec -T node npm run audit:ci
