Fix local linting.

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
         "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --performance-hints warning --color --progress --stats \"errors-only\" --mode development",
         "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats \"errors-only\" --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats \"errors-only\" --mode production",
-        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\"node_modules/**/*.(yml|yaml)\"",
-        "lint:yml:staged": "yamllint --ignore=\"node_modules/**/*.(yml|yaml)\"",
-        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
-        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#node_modules\"",
+        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\"node_modules\" --ignore=\"cypress-cache\"",
+        "lint:yml:staged": "yamllint --ignore=\"node_modules\" --ignore=\"cypress-cache\"",
+        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\" \"#cypress-cache\"",
+        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#node_modules\" \"#cypress-cache\"",
         "lint:md:staged": "markdownlint-cli2-fix \"#node_modules\"",
         "lint:js": "eslint ./src/**/*.js",
         "lint:js:staged": "eslint --fix",
@@ -62,7 +62,7 @@
         "test:watch:coverage": "npm run test:coverage -- --watch",
         "test:e2e": "node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run\"",
         "test:e2e:chrome": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run --browser chromium --headless\"",
-        "test:e2e:chrome:headed": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \" npx cypress run --browser chromium\"",
+        "test:e2e:chrome:headed": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run --browser chromium\"",
         "test:e2e:open": "node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress open --browser --e2e --project .\"",
         "test:e2e:ci": "cross-env CI=true npm run test:e2e",
         "audit:ci": "npm audit --audit-level high --json"
