--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .idea
+.vscode
+
 build
 node_modules
 tests/unit/coverage
@@ -6,4 +8,10 @@ tests/unit/**/__snapshots__
 tests/e2e/downloads
 tests/e2e/screenshots
 tests/e2e/videos
+
+.bash_history
 .env
+*.map
+src/common/index.cjs
+src/config/index.cjs
+src/routes/index.cjs
