--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-video-uploader",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "Video Uploader with React",
     "license": "UNLICENSED",
     "private": true,
@@ -11,8 +11,8 @@
         }
     ],
     "engines": {
-        "node": ">=16.15.0",
-        "npm": ">=8.5.5"
+        "node": ">=18.16.0",
+        "npm": ">=9.5.1"
     },
     "repository": {
         "type": "git",
@@ -33,20 +33,21 @@
         ]
     },
     "scripts": {
-        "prepare": "node --stack-trace-limit=9999 ./scripts/install-husky.js",
-        "clean": "rimraf ./build/bundle.* ./build/server.js && mkdirp ./build/data/uploads",
-        "dev": "concurrently --names \"build,server\" -c \"bgBlue.bold,bgCyan.bold\" \"npm run build:dev:watch\" \"wait-on ./build/server.js && npm run start:dev\"",
-        "start:dev": "cross-env NODE_ENV=development node --stack-trace-limit=9999 ./build/server.js",
-        "start": "cross-env NODE_ENV=production node ./build/server.js",
-        "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --performance-hints warning --color --progress --stats \"errors-only\" --mode development",
-        "build:dev:watch": "npm run clean && cross-env NODE_ENV=development webpack --watch --performance-hints warning --color --stats \"errors-only\" --mode development",
-        "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --stats \"errors-only\" --mode production",
-        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\"node_modules\" --ignore=\"cypress-cache\"",
-        "lint:yml:staged": "yamllint --ignore=\"node_modules\" --ignore=\"cypress-cache\"",
-        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\" \"#cypress-cache\"",
-        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#node_modules\" \"#cypress-cache\"",
-        "lint:md:staged": "markdownlint-cli2-fix \"#node_modules\"",
-        "lint:js": "eslint ./src/**/*.js",
+        "prepare": "node --stack-trace-limit=9999 --trace-warnings ./scripts/install-husky.js",
+        "clean": "rimraf ./build/*.js* ./build/*.css ./src/common/index.cjs ./src/config/index.cjs ./src/routes/index.cjs && mkdirp ./build/data/uploads",
+        "build:common": "webpack --config webpack-common.config.js --performance-hints warning --color --stats errors-only",
+        "build:browser": "cross-env APP_ENV=browser webpack --color --stats errors-warnings --config webpack.config.js",
+        "build:server": "cross-env APP_ENV=server webpack --color --stats errors-warnings --config webpack.config.js",
+        "build": "npm run clean && cross-env NODE_ENV=production npm run build:common -- --bail && cross-env NODE_ENV=production npm run build:browser -- --bail && cross-env NODE_ENV=production npm run build:server -- --bail && rimraf ./build/*.LICENSE.txt",
+        "dev": "npm run clean && concurrently --kill-others-on-fail --names \"common,build,server\" -c \"bgMagenta.bold,bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development FAST_REFRESH=true npm run build:common -- -w\" \"wait-on ./src/config/index.cjs && cross-env NODE_ENV=development FAST_REFRESH=true npm run build:server -- -w\" \"wait-on ./build/server-entry.js && cross-env NODE_ENV=development FAST_REFRESH=true npm run start -- --watch --trace-warnings --stack-trace-limit=9999\"",
+        "dev:no-watch": "npm run clean && cross-env NODE_ENV=development npm run build:common -- --progress --bail && cross-env NODE_ENV=development npm run build:browser -- --progress --bail && cross-env NODE_ENV=development npm run build:server -- --progress --bail && cross-env NODE_ENV=development npm run start -- --trace-warnings --stack-trace-limit=9999",
+        "start": "node ./src/server/index.js",
+        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
+        "lint:yml:staged": "yamllint --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
+        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:md:staged": "markdownlint-cli2-fix \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:js": "eslint ./*.js ./src/**/*.js",
         "lint:js:staged": "eslint --fix",
         "lint:js:fix": "npm run lint:js -- --fix",
         "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js --fix",
@@ -54,7 +55,7 @@
         "lint:scss:fix": "npm run lint:scss -- --fix",
         "lint": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md\" \"npm run lint:scss\" \"npm run lint:js\"",
         "lint:fix": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md:fix\" \"npm run lint:scss:fix\" \"npm run lint:js:fix\"",
-        "test": "cross-env NODE_ENV=test jest --colors --passWithNoTests --testPathPattern=\"./src/.*.test.js\"",
+        "test": "rimraf ./cypress-cache/Cypress ./cypress-cache/mesa_shader_cache && cross-env NODE_ENV=test jest --colors --passWithNoTests --testPathPattern=\"./src/.*.test.js\"",
         "test:coverage": "npm run test -- --coverage",
         "test:ci": "cross-env CI=true npm run test",
         "test:ci:coverage": "cross-env CI=true npm run test:coverage",
@@ -68,89 +69,93 @@
         "audit:ci": "npm audit --audit-level high --json"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.18.9",
-        "@material-ui/core": "^4.12.4",
-        "@material-ui/icons": "^4.11.3",
-        "@reduxjs/toolkit": "^1.8.5",
-        "axios": "^0.27.2",
-        "body-parser": "^1.20.0",
-        "chalk": "^4.1.2",
-        "classnames": "^2.3.1",
-        "cookie-parser": "^1.4.6",
-        "core-js": "^3.25.0",
-        "cors": "^2.8.5",
-        "csurf": "^1.11.0",
-        "express": "^4.18.1",
-        "fluent-ffmpeg": "^2.1.2",
-        "keymirror": "^0.1.1",
-        "lodash.get": "^4.4.2",
-        "lodash.isequal": "^4.5.0",
-        "mkdirp": "^1.0.4",
-        "multer": "^1.4.5-lts.1",
-        "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-redux": "^8.0.2",
-        "react-router-dom": "^6.3.0",
-        "react-toastify": "^9.0.8",
-        "regenerator-runtime": "^0.13.9",
-        "serialize-javascript": "^6.0.0",
-        "uuid": "^8.3.2",
-        "ws": "^8.8.1"
+        "@babel/runtime-corejs3": "7.19.1",
+        "@material-ui/core": "4.12.4",
+        "@material-ui/icons": "4.11.3",
+        "@reduxjs/toolkit": "1.8.5",
+        "axios": "0.27.2",
+        "body-parser": "1.20.0",
+        "chalk": "4.1.2",
+        "classnames": "2.3.2",
+        "cookie-parser": "1.4.6",
+        "core-js": "3.25.2",
+        "cors": "2.8.5",
+        "csurf": "1.11.0",
+        "express": "4.18.1",
+        "fluent-ffmpeg": "2.1.2",
+        "keymirror": "0.1.1",
+        "lodash.get": "4.4.2",
+        "lodash.isequal": "4.5.0",
+        "mkdirp": "1.0.4",
+        "multer": "1.4.5-lts.1",
+        "prop-types": "15.8.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-redux": "8.0.2",
+        "react-refresh": "0.14.0",
+        "react-router-dom": "6.4.1",
+        "react-toastify": "9.0.8",
+        "regenerator-runtime": "0.13.9",
+        "serialize-javascript": "6.0.0",
+        "uuid": "9.0.0",
+        "ws": "8.8.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.18.10",
-        "@babel/core": "^7.18.13",
-        "@babel/eslint-parser": "^7.18.9",
-        "@babel/eslint-plugin": "^7.18.10",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-decorators": "^7.18.10",
-        "@babel/plugin-proposal-destructuring-private": "^7.18.9",
-        "@babel/plugin-proposal-export-default-from": "^7.18.10",
-        "@babel/plugin-transform-runtime": "^7.18.10",
-        "@babel/preset-env": "^7.18.10",
-        "@babel/preset-react": "^7.18.6",
-        "@babel/register": "^7.18.9",
-        "@svgr/webpack": "^6.3.1",
-        "autoprefixer": "^10.4.8",
-        "babel-jest": "^29.0.2",
-        "babel-loader": "^8.2.5",
-        "concurrently": "^7.3.0",
-        "cross-env": "^7.0.3",
-        "css-loader": "^6.7.1",
-        "cypress": "^10.8.0",
+        "@babel/cli": "7.18.10",
+        "@babel/core": "7.19.1",
+        "@babel/eslint-parser": "7.19.1",
+        "@babel/eslint-plugin": "7.19.1",
+        "@babel/plugin-proposal-class-properties": "7.18.6",
+        "@babel/plugin-proposal-decorators": "7.19.1",
+        "@babel/plugin-proposal-destructuring-private": "7.18.9",
+        "@babel/plugin-proposal-export-default-from": "7.18.10",
+        "@babel/plugin-transform-runtime": "7.19.1",
+        "@babel/preset-env": "7.19.1",
+        "@babel/preset-react": "7.18.6",
+        "@babel/register": "7.18.9",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.5.7",
+        "@svgr/webpack": "6.3.1",
+        "autoprefixer": "10.4.12",
+        "babel-jest": "29.0.3",
+        "babel-loader": "8.2.5",
+        "clear-module": "4.1.2",
+        "concurrently": "7.4.0",
+        "cross-env": "7.0.3",
+        "css-loader": "6.7.1",
+        "cypress": "10.8.0",
         "eslint": "8.22.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-plugin-babel": "^5.3.1",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-destructuring": "^2.2.1",
-        "eslint-plugin-react": "^7.31.4",
-        "file-loader": "^6.2.0",
-        "jest": "^29.0.3",
-        "jest-environment-jsdom": "^29.0.3",
-        "husky": "^8.0.1",
-        "html-webpack-plugin": "^5.5.0",
-        "lint-staged": "^13.0.3",
-        "markdownlint-cli2": "^0.5.1",
-        "micromatch": "^4.0.5",
-        "mini-css-extract-plugin": "^2.6.1",
-        "normalize.css": "^8.0.1",
-        "npm-run-all": "^4.1.5",
-        "postcss-cli": "^10.0.0",
-        "postcss-loader": "^7.0.1",
-        "resolve-url-loader": "^5.0.0",
-        "rimraf": "^3.0.2",
-        "sass": "^1.54.8",
-        "sass-loader": "^13.0.2",
-        "stylelint": "^14.10.0",
-        "stylelint-config-standard-scss": "^5.0.0",
-        "terser-webpack-plugin": "^5.3.6",
-        "url-loader": "^4.1.1",
-        "wait-on": "^6.0.1",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-node-externals": "^3.0.0",
-        "yaml-lint": "^1.7.0"
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-plugin-babel": "5.3.1",
+        "eslint-plugin-import": "2.26.0",
+        "eslint-plugin-jsx-a11y": "6.6.1",
+        "eslint-plugin-destructuring": "2.2.1",
+        "eslint-plugin-react": "7.31.8",
+        "file-loader": "6.2.0",
+        "jest": "29.0.3",
+        "jest-environment-jsdom": "29.0.3",
+        "husky": "8.0.1",
+        "lint-staged": "13.0.3",
+        "markdownlint-cli2": "0.5.1",
+        "memfs": "3.4.7",
+        "micromatch": "4.0.5",
+        "mini-css-extract-plugin": "2.6.1",
+        "normalize.css": "8.0.1",
+        "postcss-cli": "10.0.0",
+        "postcss-loader": "7.0.1",
+        "resolve-url-loader": "5.0.0",
+        "rimraf": "3.0.2",
+        "sass": "1.55.0",
+        "sass-loader": "13.0.2",
+        "stylelint": "14.12.1",
+        "stylelint-config-standard-scss": "5.0.0",
+        "terser-webpack-plugin": "5.3.6",
+        "url-loader": "4.1.1",
+        "wait-on": "6.0.1",
+        "webpack": "5.76.3",
+        "webpack-cli": "4.10.0",
+        "webpack-dev-middleware": "5.3.3",
+        "webpack-hot-middleware": "2.25.3",
+        "webpack-node-externals": "3.0.0",
+        "yaml-lint": "1.7.0"
     }
 }
