--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
         "lint:md": "markdownlint-cli2 \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
         "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
         "lint:md:staged": "markdownlint-cli2-fix \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
-        "lint:js": "eslint ./*.js ./src/**/*.js",
-        "lint:js:staged": "eslint --fix",
+        "lint:js": "eslint --ignore-pattern \"node_modules/*\" \"./**/*.js\"",
+        "lint:js:staged": "eslint --ignore-pattern \"node_modules/*\" \"./**/*.js\" --fix",
         "lint:js:fix": "npm run lint:js -- --fix",
         "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js --fix",
-        "lint:scss": "stylelint --allow-empty-input --config ./stylelint.config.js ./src/**/*.scss",
+        "lint:scss": "stylelint --allow-empty-input --config ./stylelint.config.js \"./src/**/*.scss\"",
         "lint:scss:fix": "npm run lint:scss -- --fix",
         "lint": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md\" \"npm run lint:scss\" \"npm run lint:js\"",
         "lint:fix": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md:fix\" \"npm run lint:scss:fix\" \"npm run lint:js:fix\"",
