--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,10 +1,10 @@
-.idea
-.vscode
-.github
-.husky
-build
-cypress-cache
-docker
-hooks
-node_modules
-server
+/.idea
+/.vscode
+/.github
+/.husky
+/build
+/cypress-cache
+/docker
+/hooks
+/node_modules
+/server
