--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "lint:scss:fix": "npm run lint:scss -- --fix",
         "lint": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md\" \"npm run lint:scss\" \"npm run lint:js\"",
         "lint:fix": "concurrently --names \"yamllint,markdownlint,stylelint,eslint\" -c \"bgMagenta.bold,bgGreen.bold,bgBlue.bold,bgCyan.bold\" \"npm run lint:yml\" \"npm run lint:md:fix\" \"npm run lint:scss:fix\" \"npm run lint:js:fix\"",
-        "test": "rimraf ./cypress-cache/Cypress ./cypress-cache/mesa_shader_cache && cross-env NODE_ENV=test jest --colors --passWithNoTests --testPathPattern=\"./src/.*.test.js\"",
+        "test": "rimraf ./cypress-cache/mesa_shader_cache && cross-env NODE_ENV=test jest --colors --passWithNoTests --testPathPattern=\"./src/.*.test.js\"",
         "test:coverage": "npm run test -- --coverage",
         "test:ci": "cross-env CI=true npm run test",
         "test:ci:coverage": "cross-env CI=true npm run test:coverage",
@@ -73,12 +73,12 @@
         "@babel/runtime-corejs3": "7.21.5",
         "@emotion/react": "11.11.0",
         "@emotion/styled": "11.11.0",
-        "@fontsource/roboto": "4.5.8",
-        "@fontsource/ubuntu-mono": "4.5.11",
+        "@fontsource/roboto": "5.0.1",
+        "@fontsource/ubuntu-mono": "5.0.1",
         "@mui/icons-material": "5.11.16",
-        "@mui/material": "5.12.3",
+        "@mui/material": "5.13.2",
         "@reduxjs/toolkit": "1.9.5",
-        "@remix-run/router": "1.6.1",
+        "@remix-run/router": "1.6.2",
         "axios": "1.4.0",
         "body-parser": "1.20.2",
         "chalk": "4.1.2",
@@ -98,7 +98,7 @@
         "react-dom": "18.2.0",
         "react-redux": "8.0.5",
         "react-refresh": "0.14.0",
-        "react-router-dom": "6.11.1",
+        "react-router-dom": "6.11.2",
         "regenerator-runtime": "0.13.11",
         "serialize-javascript": "6.0.1",
         "uuid": "9.0.0",
@@ -125,9 +125,9 @@
         "babel-loader": "9.1.2",
         "concurrently": "8.0.1",
         "cross-env": "7.0.3",
-        "css-loader": "6.7.3",
+        "css-loader": "6.7.4",
         "cypress": "12.12.0",
-        "eslint": "8.40.0",
+        "eslint": "8.41.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-plugin-babel": "5.3.1",
         "eslint-plugin-import": "2.27.5",
@@ -142,22 +142,22 @@
         "lint-staged": "13.2.2",
         "markdownlint-cli2": "0.7.1",
         "micromatch": "4.0.5",
-        "mini-css-extract-plugin": "2.7.5",
+        "mini-css-extract-plugin": "2.7.6",
         "normalize.css": "8.0.1",
         "postcss-cli": "10.1.0",
         "postcss-loader": "7.3.0",
         "resolve-url-loader": "5.0.0",
-        "rimraf": "5.0.0",
+        "rimraf": "5.0.1",
         "sass": "1.62.1",
-        "sass-loader": "13.2.2",
-        "stylelint": "15.6.1",
+        "sass-loader": "13.3.0",
+        "stylelint": "15.6.2",
         "stylelint-config-standard-scss": "9.0.0",
-        "terser-webpack-plugin": "5.3.8",
+        "terser-webpack-plugin": "5.3.9",
         "url-loader": "4.1.1",
         "wait-on": "7.0.1",
-        "webpack": "5.82.0",
+        "webpack": "5.83.1",
         "webpack-cli": "5.1.1",
-        "webpack-dev-middleware": "6.1.0",
+        "webpack-dev-middleware": "6.1.1",
         "webpack-hot-middleware": "2.25.3",
         "webpack-manifest-plugin": "5.0.0",
         "webpack-node-externals": "3.0.0",
